--- a/backend/ezlearning-api/pom.xml
+++ b/backend/ezlearning-api/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>       
+           <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
