--- a/backend/ezlearning-api/pom.xml
+++ b/backend/ezlearning-api/pom.xml
@@ -35,12 +35,19 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>       
-           <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
+        <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
