--- a/ezlearning-frontend/package.json
+++ b/ezlearning-frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.17",
+    "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
