--- a/ezlearning-frontend/package.json
+++ b/ezlearning-frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17",
     "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.2",
